# queryscape

./: .gitignore  .npmrc  .prettierignore  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.workspace.ts
.changeset/: config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/demo-web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/demo-web/src/: main.ts  style.css
docs/: ARCHITECTURE.md  CONNECTORS.md  CONTRIBUTING.md  SECURITY.md
rust/accelerator/: Cargo.toml  test_integration.sh
rust/accelerator/src/: lib.rs  main.rs  protocol.rs  sampling.rs
