[package]
name = "graphscope-accelerator"
version = "0.1.0"
edition = "2021"
authors = ["GraphScope Contributors"]
description = "Rust accelerator sidecar for GraphScope"
license = "MIT"
repository = "https://github.com/graphscope/graphscope"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
