[package]
name = "queryscape-accelerator"
version = "0.1.0"
edition = "2021"
authors = ["QueryScape Contributors"]
description = "Rust accelerator sidecar for QueryScape"
license = "MIT"
repository = "https://github.com/ascendoria-holdings/queryscape"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.10"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
